updated BrobIntTemplate.java; added subtractcases.txt